Working button and input detection. Changed approach to use fragments instead of triangles, seems promising.

--- a/inference/style.css
+++ b/inference/style.css
@@ -32,6 +32,10 @@ with columns to a new line */
   margin: 5px;
 }
 
-.row div {
+.row .container {
+  border: 1px solid green;
+}
+
+.row .row {
   border: 1px solid green;
 }
