--- a/inference/global/vanilla.css
+++ b/inference/global/vanilla.css
@@ -6,8 +6,8 @@ html, body {
 }
 
 .container, .row {
-  border: 1px solid #37474F;
   padding: 10px;
+  margin: 0;
   /*
   display: flex;
   flex-direction: column;
@@ -17,11 +17,6 @@ html, body {
   width: -moz-fill-available;
   width: -webkit-fill-available;
   margin: 5px; */
-}
-
-/* ID Labels are hidden by default, toggled with a keypress */
-span.label-wrap {
-  display: none;
 }
 
 /* Panels are full-height containers. These are 'pages' within the single page,
@@ -59,18 +54,4 @@ with columns to a new line */
 .label-wrap {
   border: 0px;
   width: 100%;
-}
-
-.row {
-  border: 1px solid red;
-  align-items: center;
-  margin: 5px;
-}
-
-.row .container {
-  border: 1px solid green;
-}
-
-.row .row {
-  border: 1px solid green;
 }
