--- a/web-platform/frontend/src/App.css
+++ b/web-platform/frontend/src/App.css
@@ -108,6 +108,10 @@ h2 {
   background-color: rgba(240, 248, 255, 0.2);
 }
 
+.drop-active {
+  background-color: rgba(240, 100, 255, 0.8);
+}
+
 /** Label styling. */
 .shape-type-label {
   margin: auto;
