--- a/web-platform/frontend/src/App.css
+++ b/web-platform/frontend/src/App.css
@@ -109,7 +109,15 @@ h2 {
 }
 
 .drop-active {
-  background-color: rgba(240, 100, 255, 0.8);
+  background-color: #afd6ffcc;
+}
+
+.selected {
+  background-color: #FFC107 !important;
+}
+
+.selected label {
+  color: black;
 }
 
 /** Label styling. */
