--- a/web-platform/frontend/src/App.css
+++ b/web-platform/frontend/src/App.css
@@ -127,6 +127,18 @@ h2 {
   color: cornflowerblue;
 }
 
+.codegen-container {
+  height: 100%;
+  width: 100%;
+}
+
+/** iFrame styling */
+iframe.live-preview {
+  border: none;
+  height: 100%;
+  width: 100%;
+}
+
 /** Footer Styling */
 footer {
   position: absolute;
