--- a/inference/global/debug.css
+++ b/inference/global/debug.css
@@ -16,20 +16,20 @@
 
  .row.show-border {
    border: 1px solid red;
-   margin: 10px;
+   /* margin: 10px; */
  }
 
  .row .column.show-border {
    border: 1px solid green;
-   margin: 10px;
+   /* margin: 10px; */
  }
 
  .row .container.show-border {
    border: 1px solid green;
-   margin: 10px;
+   /* margin: 10px; */
  }
 
  .row .row.show-border {
    border: 1px solid green;
-   margin: 10px;
+   /* margin: 10px; */
  }
