Move grid inference to post-ACR customisation, and re-implement navigation with navbar-brand and collapse functionality

--- a/inference/global/vanilla.css
+++ b/inference/global/vanilla.css
@@ -33,9 +33,14 @@ and so it is desireable to have all of the content centered vertically within it
   justify-content: center;
 }
 
+/* Add some vertical spacing between elements in a panel and vertical container. */
+.panel > * {
+  padding-top: 15px;
+}
+
 /* Navigation bar must be sticky and not exceed 60 pixels in height */
 nav {
-  height: 70px;
+  /* height: 70px; */
   /* position: absolute !important; */
   top:0;
   width: 100%;
