Re-implement bundling & code embed using ejs templates & new dir structure (+ zipping)

--- a/inference/modules/bundle/templates/views/index.ejs
+++ b/inference/modules/bundle/templates/views/index.ejs
@@ -20,8 +20,8 @@ Template params;
     <!-- Metadata -->
     <meta source-filename="<%= file %>" />
     <meta source-path="<%= imagePath %>" />
-    <meta context="<%= args.context %>" />
-    <meta output-type="<%= args.project %>" />
+    <meta context="<%= context %>" />
+    <meta output-type="<%= projectType %>" />
 
     <title><%= fileName[0].toUpperCase() + fileName.substring(1, fileName.length) %></title>
 
