Partial auth token implementation; some views fail to render before being copied over to the project dir

--- a/inference/modules/bundle/templates/app.js.ejs
+++ b/inference/modules/bundle/templates/app.js.ejs
@@ -56,8 +56,8 @@ const indexRouter = require(path.join(__dirname, 'routes/index'))();
 %>
 <% if (locals.generateAuthRoutes) { %>
 const loginRouter = require(path.join(__dirname,'routes/login'))({db, passport});
-const registrationRouter = require(path.join(__dirname, 'routes/register')({db, passport});
-const logoutRouter = require(path.join(__dirname, 'routes/logout')({db, passport});
+const registrationRouter = require(path.join(__dirname, 'routes/register'))({db, passport});
+const logoutRouter = require(path.join(__dirname, 'routes/logout'))({db, passport});
 <% } %>
 
 const app = express();
