--- a/inference/modules/bundle/templates/views/index.ejs
+++ b/inference/modules/bundle/templates/views/index.ejs
@@ -15,21 +15,9 @@ Template params;
 <!-- Copyright @ Aaron Baw 2018 -->
 <!DOCTYPE html>
 <html>
-  <head>
-
-    <!-- Metadata -->
-    <meta source-filename="<%= file %>" />
-    <meta source-path="<%= imagePath %>" />
-    <meta context="<%= context %>" />
-    <meta output-type="<%= projectType %>" />
-
-    <title><%= fileName[0].toUpperCase() + fileName.substring(1, fileName.length) %></title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-    <%- cssEmbed %>
-  </head>
+  <%- include('header', locals) %>
   <body>
+  <%%- include('nav', locals) %%>
   <%- code %>
 
   <div id="source-image-preview" style="
