--- a/web-platform/frontend/src/App.css
+++ b/web-platform/frontend/src/App.css
@@ -139,6 +139,47 @@ iframe.live-preview {
   width: 100%;
 }
 
+/** Overlay button styling */
+div.overlay-buttons-container {
+  display: flex;
+  flex-direction: row;
+}
+
+div.overlay-buttons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 2;
+  bottom: 0;
+  right: 0;
+  padding: 20px;
+}
+
+div.overlay-button-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+  opacity: 0.2;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+div.overlay-button-container:hover{
+  opacity: 1;
+}
+
+div.overlay-button-container > button {
+  margin-top: 10px;
+  border: 0;
+  font-family: "Futura PT", sans-serif;
+  font-weight: 500;
+  color: #7E8389;
+}
+
 /** Footer Styling */
 footer {
   position: absolute;
