--- a/web-platform/frontend/src/Resets.css
+++ b/web-platform/frontend/src/Resets.css
@@ -128,6 +128,7 @@ input[type="submit"]
 	/* Fix IE7 display bug */
 	overflow:visible;
 	width:auto;
+  outline: none;
 }
 
 /* IE8 and FF freak out if this rule is within another selector */
