--- a/inference/global/vanilla.css
+++ b/inference/global/vanilla.css
@@ -3,7 +3,7 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: "Avenir", sans-serif;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
 }
 
