--- a/web-platform/frontend/src/App.css
+++ b/web-platform/frontend/src/App.css
@@ -28,6 +28,7 @@ p {
 
 h1 {
   margin: 0;
+  font-size: 36px;
   font-family: "Futura", sans-serif;
 }
 
@@ -44,29 +45,61 @@ h3 {
 }
 
 /*  Landing page styling */
+/* .landing-page-container > div {
+  height: 100% !important;
+} */
+
+
 .landing-page-container {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
+}
+
+.landing-page-container div {
+  /* height: 100% !important; */
 }
 
 .landing-headers-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
+  width: 300px;
+}
+
+/** Vertical panel styling */
+div.vertical-panel {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 50px;
 }
 
 /** Upload box styling */
 .uploader-container {
   min-height: 100px;
+  height: 100%;
+  width: 100%;
   display: flex;
+
   justify-content: center;
   align-items: center;
   flex-direction: row;
+}
+
+.uploader-hover{
+  background: #dce4ff33;
+}
+
+.uploader-active {
+  color: rgb(55, 215, 119);
 }
 
 /** ACR Modification Module styling */
@@ -74,7 +107,8 @@ h3 {
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  /* justify-content: center; */
   align-items: center;
 }
 
@@ -104,19 +138,41 @@ h3 {
 
 button {
   cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+button.button-fade:hover {
+  /* transform: scale(1.1);
+  box-shadow: 1px 5px 9px #00000017; */
+}
+
+button.button-enlarge:hover {
+  transform: scale(1.1);
+  box-shadow: 1px 5px 9px #00000017;
 }
 
 button.button-fade > svg {
   fill: #dedfe3;
+  opacity: 0.5;
   transition: 0.3s ease-in-out;
 }
 
 button.button-fade:hover > svg {
   fill: #2e3437;
+  opacity: 1;
+}
+
+button.active {
+  /* transform: scale(1.1); */
 }
 
 button.active > svg {
   fill: #3d59d4;
+  opacity: 1;
+}
+
+button.active > p {
+  color: #2e3437 !important;
 }
 
 .continue-button, .arrow {
@@ -132,13 +188,14 @@ button.active > svg {
 
 /** Bounding Box styling */
 .bounding-box {
-  border: 1px dashed #78909C;
+  border: 2px dashed #78909C;
   background-color: rgba(240, 248, 255, 0.8);
   position: absolute;
   z-index: 1;
   box-sizing: border-box;
   display: flex;
   transition: 0.05s ease-in-out;
+  border-radius: 5px;
 }
 
 .bounding-box:hover{
@@ -169,6 +226,10 @@ button.active > svg {
   width: 100%;
 }
 
+/* div.loading-container {
+  height: 100%;
+} */
+
 /** iFrame styling */
 iframe.live-preview {
   border: none;
@@ -180,6 +241,9 @@ iframe.live-preview {
 div.overlay-buttons-container {
   display: flex;
   flex-direction: row;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 div.overlay-buttons-container {
@@ -295,9 +359,11 @@ div.edit-dialogue-primitive-type-container {
 }
 
 div.edit-dialogue-primitive-type-container > * {
-  width: 50px;
-    margin: 5px;
-
+  margin: 5px;
+  padding: 10px;
+  box-shadow: 1px 1px 9px #0000000d;
+  border-radius: 5px;
+  border: 1px solid #80808030;
 }
 
 div.edit-dialogue-primitive-type-container  p {
@@ -312,6 +378,12 @@ div.edit-dialogue-primitive-type-container > *:hover p {
 }
 
 
+div.generate-login-option-container {
+  display: flex;
+  margin-top: 10px;
+}
+
+
 div.primitive-type-option-container {
   display: flex;
   flex-direction: column;
@@ -321,11 +393,39 @@ div.primitive-type-option-container {
   height: 70px;
 }
 
+.primitive-type-option-container > svg {
+  width: 30px;
+  height: 30px;
+}
+
+
 div.contained-primitive-container {
   border: 1px solid #dedfe3;
   border-radius: 7px;
   padding: 10px;
 }
+
+
+/** Custom file upload input styling by: https://tympanus.net/codrops/2015/09/15/styling-customizing-file-inputs-smart-way/ */
+input.file {
+width: 0.1px;
+height: 0.1px;
+opacity: 0;
+overflow: hidden;
+position: absolute;
+z-index: -1;
+}
+
+.file-drop, .file-drop-target {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 50px;
+  transition: 0.3s ease-in-out;
+}
+
 
 input {
   border: 1px solid #dedfe3;
@@ -353,7 +453,6 @@ footer {
   justify-content: center;
   align-items: center;
   margin-top: auto;
-  background-color: #c1c6d1;
   height: 70px;
   width: 100%;
 }
