--- a/inference/global/vanilla.css
+++ b/inference/global/vanilla.css
@@ -108,3 +108,8 @@ h1 {
 form {
   margin-bottom: 0;
 }
+
+/** General classes. */
+.box-shadow {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
+}
