--- a/inference/modules/bundle/templates/views/login.ejs
+++ b/inference/modules/bundle/templates/views/login.ejs
@@ -10,7 +10,7 @@
       margin: auto;
     ">
 
-  <form action="/login" method="POST">
+  <form action="login" method="POST">
 
     <div class="form-group">
       <h1>Login below.</h1>
