--- a/web-platform/frontend/src/Styles/Toolbar.css
+++ b/web-platform/frontend/src/Styles/Toolbar.css
@@ -1,19 +1,30 @@
 .modify-acr-toolbar-container {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.toolbar-hover-text {
+  margin-bottom: 10px;
+  opacity: 0.7;
+}
+
+.modify-acr-toolbar {
   border: 1px solid var(--border-blue);
   display: flex;
   align-items: center;
   padding: 5px 10px 5px 10px;
   border-radius: 8px;
-  position: absolute;
   box-shadow: 0px 0px 3px #E7ECFF;
-  bottom: 50px;
-  right: 50px;
   background-color: white;
-  z-index: 10;
   transition: 0.3s ease-in-out;
 }
 
-.modify-acr-toolbar-container:hover {
+.modify-acr-toolbar:hover {
   box-shadow: 0px 4px 6px #E7ECFF;
   /* transform: translateY(-3px); */
 }
@@ -29,10 +40,13 @@
   opacity: 0.5;
 }
 
-.toolbar-section > *:hover {
+.selected-button {
   opacity: 1;
 }
 
+.toolbar-section > *:hover {
+  opacity: 1;
+}
 
 
 .vertical-separator {
