--- a/web-platform/frontend/src/Styles/ModifyACR.css
+++ b/web-platform/frontend/src/Styles/ModifyACR.css
@@ -90,7 +90,7 @@ button.active > p {
   z-index: 1;
   box-sizing: border-box;
   display: flex;
-  transition: 0.05s ease-in-out;
+  transition: 0.15s ease-in-out;
   border-radius: 5px;
 }
 
@@ -100,6 +100,7 @@ button.active > p {
 
 .drop-active {
   background-color: #afd6ffcc;
+  transform: scale(1.05);
 }
 
 .selected {
