--- a/inference/modules/bundle/templates/views/header.ejs
+++ b/inference/modules/bundle/templates/views/header.ejs
@@ -5,6 +5,9 @@
   <meta source-path="<%= imagePath %>" />
   <meta context="<%= context %>" />
   <meta output-type="<%= projectType %>" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title><%= fileName[0].toUpperCase() + fileName.substring(1, fileName.length) %></title>
 
