--- a/web-platform/frontend/src/App.css
+++ b/web-platform/frontend/src/App.css
@@ -50,7 +50,7 @@ h3 {
   height: 100%;
   display: flex;
   /* flex-direction: column; */
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
